[tool.poetry]
name = "daily-sudoku"
version = "0.1.0"
description = ""
authors = ["Ang Houfu <damon.houf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
schedule = "^0.6.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-mock = "^3.1.1"
requests-mock = "^1.8.0"
pytest-cov = "^2.10.0"
pytest-sugar = "^0.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
